Fix tools overflowing on tools

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -60,4 +60,7 @@ body {
 .alert {
   margin-top: 20px;
 }
-
+.small-scroll {
+  height: 90px;
+  overflow-y: auto;
+}
