--- a/app/assets/stylesheets/projects.scss
+++ b/app/assets/stylesheets/projects.scss
@@ -5,8 +5,3 @@
   display: inline-block;
   margin-right: 74%;
 }
-
-.small-scroll {
-  height: 90px;
-  overflow-y: auto;
-}
